# selene

./: .gitignore  .gitmodules  CMakeLists.txt  CheckLua.cmake  CheckSDL.cmake  Makefile  README.md  boot.lua  build.sh  build_core.sh  conf.lua  copy_scripts.sh  download_android.sh  download_sdl.sh  generator.lua  lua_proj.lua  main.lua  msvcbuild.bat  premake5-system.lua  premake5.lua  run.bat  selene.c  selene.h  selene.lua
.github/workflows/: build.yml
annotations/: audio.lua  fs.lua  gl.lua  image.lua  sdl2.lua  selene.lua
ccore/: App.lua  Config.lua  Event.lua  Filesystem.lua  Render.lua  class.lua  gamepad.lua  init.lua  joystick.lua  keyboard.lua  mouse.lua
ccore/audio/: Music.lua  Sound.lua  SoundInstance.lua
ccore/graphics/: Batch.lua  Canvas.lua  Effect.lua  Font.lua  Image.lua  init.lua
ccore/input/: init.lua
cmake/: CPackConfig.cmake  CheckLua.cmake  CheckPlatform.cmake  CheckSDL2.cmake  CheckSDL3.cmake  CheckTriple.cmake  Config.cmake  FindCustomSDL2.cmake  Install.cmake
cmake/scripts/: DownloadAppImage.cmake  DownloadSDL2.cmake  GenerateAndroidApk.cmake  GenerateAppImage.cmake  PackageWindows.cmake  SetupAndroidSDK.cmake  SetupEmscripten.cmake
cmake/toolchains/: Aarch64.cmake  Android.cmake  Emscripten.cmake  Powerpc64.cmake  i686.cmake
core/: audio.lua  class.lua  controller.lua  event.lua  filesystem.lua  init.lua  joystick.lua
core/audio/: Audio.lua  AudioInstance.lua  Music.lua  Sound.lua  SoundInstance.lua  init.lua
core/editor/: init.lua
core/engine/: Point.lua  Rect.lua  Sprite.lua  init.lua
core/graphics/: Batch.lua  Canvas.lua  Drawable.lua  Font.lua  Image.lua  Shader.lua  Sprite.lua  batch.lua  canvas.lua  drawable.lua  font.lua  image.lua  init.lua  rect.lua  shader.lua  spritebatch.lua  vertexformat.lua
core/plugins/: init.lua
core/ui/: init.lua
cross/: ICON.rc  README.md
cross/AppImage/: AppRun
cross/android/: init.lua
cross/android/app/: build.gradle
cross/emscripten/: index_debug.html
cross/toolchains/: Android.cmake  MinGW-i686.cmake  MinGW.cmake
defs/: selene.lua
defs/selene/: Data.lua  audio.lua  font.lua  fs.lua  gl.lua  linmath.lua  sdl2.lua
examples/: game.ldtk
examples/3d/: CatModel.lua  cube_data.lua  main.lua
examples/audio/: main.lua
examples/batch2d/: main.lua
examples/batch2d/spv/: priv2d.fs  priv2d.vs  priv2d_fs.spv  priv2d_vs.spv  spr2d.fs  spr2d.vs  spr2d_fs.spv  spr2d_vs.spv
examples/cube/: main.lua  main1.lua
examples/draw/: main.lua
examples/game/: Class.tl  Reposts.md  game.ldtk  main.lua  main1.lua  player.lua
examples/game/.selene/: settings.lua
examples/gl/: main.lua
examples/open_file/: file.txt  main.lua
examples/renderer/: frag.spv  main.lua  shader.frag  shader.vert  vert.spv
examples/renderer/shaders/: frag.glsl  frag.glsl100  frag.hlsl  frag.spv  shader450.frag  shader450.vert  vert.glsl  vert.glsl100  vert.hlsl  vert.spv
examples/sdl2/: main.lua
examples/test/: main.lua
examples/ui/: Point.tl  main.lua  teste.tl
include/: common.h  helper.h  lua_helper.h  platforms.h  selene.h  selene_audio.h  selene_config.h  selene_config.h.in  selene_renderer.h
include/modules/: audio.h  filesystem.h  renderer.h  window.h
lua/: CMakeLists.txt  main.c  main.lua
lua/lua5.1/: CMakeLists.txt
lua/luajit/: msvcbuild.bat
lua/toolchains/: Android.cmake  Emscripten.cmake  MinGW-i686.cmake
misc/annotations/: font.lua  gl.lua  image.lua  json.lua  selene.lua
misc/cross/AppImage/: AppRun  selene.desktop
misc/cross/emscripten/: index.html
misc/cross/macos/: Info.plist.in  selene_icon.icns
misc/cross/windres/: ICON.APS
misc/docker/android/: Dockerfile  DownloadSDL2.cmake  build.sh
misc/docker/emscripten/: Dockerfile  build.sh
misc/docker/freebsd/: Dockerfile
misc/docker/linux/: Dockerfile  DownloadAppImage.cmake  entrypoint.sh
misc/docker/msvc/: Dockerfile
misc/scripts/: build.sh  dist.sh  download_sdl.sh  msvcbuild.bat  setup.sh
misc/scripts/premake/: gen_gamejs.lua  generator.lua
plugins/RenderBatch2D/: Canvas.lua  Drawable.lua  Font.lua  Image.lua  dx_shaders.lua  gl_shaders.lua  init.lua  spirv_shaders.lua
scripts/: README.md  build.sh  dist.sh  docker.sh  download_sdl.sh  main.tl  msvcbuild.bat  setup.sh  setup_androidsdk.sh
scripts/core/: App.lua  Event.lua  Filesystem.lua  Game.lua  Point.lua  Rect.lua  Render.lua  Settings.lua  Window.lua  event.lua  init.lua
scripts/core/audio/: AudioSystem.lua  Music.lua  Sound.lua  init.lua
scripts/core/graphics/: Batch.lua  Camera.lua  Canvas.lua  Color.lua  Drawable.lua  Effect.lua  Font.lua  Image.lua  Rect.lua  Renderer.lua  RendererBackup.lua  Shader.lua
scripts/core/input/: Gamepad.lua  Joystick.lua  Keyboard.lua  Mouse.lua
scripts/core/math/: Mat4.lua  Vec2.lua  Vec3.lua  Vec4.lua
scripts/editor/: Frame.lua  Layout.lua  MenuBar.lua  Window.lua  Workspace.lua  init.lua  palette.lua  style.lua
scripts/engine/: Camera.lua  Entity.lua  Project.lua  Tileset.lua  World.lua  init.lua
src/: Data.c  Data.h  Renderer.c  audio.c  common.h  data.c  extended_libs.c  fs.c  gl.c  lua_helper.h  main.c  sdl2.c  selene.c  selene.h  selene_events.c  selene_filesystem.c  selene_main.c  system.c  utils.c
src/core/: selene.c  selene_audio.c  selene_enums.c  selene_events.c  selene_filesystem.c  selene_main.c  selene_renderer.c  selene_window.c
src/modules/: audio.c  audio.c_old  ctypes.c  font.c  fs.c  gl.c  image.c  init.lua  linmath.c  ljson.c  modules.h  premake5.lua  runner.c  sdl.c  sdl2.c  sdl2.lua
src/runners/: default.c
teal/: main.tl  selene.d.tl  tlconfig.lua
teal/core/: App.tl  Config.tl  Event.tl  Filesystem.tl  Game.tl  Point.tl  Rect.tl  Render.tl  Window.tl  init.tl
test/: App.lua  Filesystem.lua  Point.lua  Rect.lua  Settings.lua  init.lua
test/audio/: SoundInstance.lua
test/graphics/: Canvas.lua  Color.lua  Drawable.lua  Effect.lua
third/lua/: CMakeLists.txt  README.md  build.sh  msvcbuild.bat  test.sh
third/minigl/: functions.lua  minigl.c  minigl.h
toolchains/: Aarch64.cmake  Android.cmake  Emscripten.cmake  Powerpc64.cmake  i686.cmake
(+236 files in other folders)
